# bayrol-ha-rdf

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  hacs.json  pyproject.toml
.cursor/skills/release-with-gh/: SKILL.md
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: dependency-review.yml  hassfest.yml  lint.yml  release-drafter.yml  stale.yml  tests.yml  validate.yaml
custom_components/bayrol/: __init__.py  binary_sensor.py  config_flow.py  const.py  diagnostics.py  manifest.json  mqtt_manager.py  select.py  sensor.py
custom_components/bayrol/translations/: en.json
docs/: DeviceDriver.js  releasing-with-gh.md
tests/: conftest.py  test_binary_sensor.py  test_connection.py  test_mqtt_manager_callbacks.py
